Implement basic html

--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDo</title>
 </head>
 <body>
-    
+    <div class="homepage">
+        <div class="homepageHeader">
+            <div class="homepageHeaderText">TODO</div>
+        </div>
+        <div class="homepageSidebar">
+            <div class="sidebarTitle">Sort Tasks</div>
+            <button class="sidebarItem">All</button>
+            <button class="sidebarItem">Today</button>
+            <button class="sidebarItem">This Week</button>
+            <button class="sidebarItem">Important</button>
+            <div class="sidebarTitle">Projects</div>
+            <button class="sidebarItem">Project 1</button>
+            <button class="sidebarItem">Project 2</button>
+            <button class="sidebarItem">Project 3</button>
+        </div>
+        <div class="homepageMain">
+            <div class="homepageMainTitle">All</div>
+            <button class="task">
+                <span class="taskTitle">Do Stuff</span>
+                <span class="taskDate">August 10</span>
+                <span class="taskProject">Project 1</span>
+            </button>
+        </div>
+    </div>
 </body>
 </html>
