start main styling

--- a/src/template.html
+++ b/src/template.html
@@ -23,11 +23,33 @@
         </div>
         <div class="homepageMain">
             <div class="homepageMainTitle">All</div>
-            <button class="task">
-                <span class="taskTitle">Do Stuff</span>
-                <span class="taskDate">August 10</span>
-                <span class="taskProject">Project 1</span>
-            </button>
+            <div class="taskDisplay">
+                <button class="task prio1">
+                    <span class="taskTitle">Do Stuff</span>
+                    <span class="taskDate">August 10</span>
+                    <span class="taskProject">Project 1</span>
+                </button>
+                <button class="task prio2">
+                    <span class="taskTitle">Do Stuff</span>
+                    <span class="taskDate">August 10</span>
+                    <span class="taskProject">Project 1</span>
+                </button>
+                <button class="task prio3">
+                    <span class="taskTitle">Do Stuff</span>
+                    <span class="taskDate">August 10</span>
+                    <span class="taskProject">Project 1</span>
+                </button>
+                <button class="task prio4">
+                    <span class="taskTitle">Do Stuff</span>
+                    <span class="taskDate">August 10</span>
+                    <span class="taskProject">Project 1</span>
+                </button>
+                <button class="task prio5">
+                    <span class="taskTitle">Do Stuff</span>
+                    <span class="taskDate">August 10</span>
+                    <span class="taskProject">Project 1</span>
+                </button>
+            </div>
         </div>
     </div>
 </body>
