Add add task button

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,7 @@
     <title>ToDo</title>
 </head>
 <body>
+    <button class="addTaskButton">+</button>
     <div class="homepage">
         <div class="homepageHeader">
             <div class="homepageHeaderText">TODO</div>
